# Graphics-Engine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
include/: color.h  light.h  mat4.h  mesh.h  model.h  renderer.h  triangle.h  vec3d.h  vsh.h
src/: color.cpp  light.cpp  main.cpp  mat4.cpp  mesh.cpp  model.cpp  renderer.cpp  triangle.cpp  vec3d.cpp  vsh.cpp
